# lofi_pomodoro

./: .gitignore
docs/: index.html  lofi_pomodoro_frontend-b2fe61fa2c2b0f59.js  lofi_pomodoro_frontend-b2fe61fa2c2b0f59_bg.wasm  pomodoro-aa675f445b0dbd9b.css
lofi_pomodoro_backend/: Cargo.toml
lofi_pomodoro_desktop/: Cargo.toml  tauri.conf.json
lofi_pomodoro_desktop/src/: main.rs
lofi_pomodoro_frontend/: Cargo.toml  index.html  pomodoro.scss
lofi_pomodoro_frontend/src/: main.rs
lofi_pomodoro_frontend/src/components/: bottom_ui.rs  button.rs  clock.rs  link.rs  mod.rs  textbox_input.rs  top_ui.rs
lofi_pomodoro_frontend/src/components/lofi_radio/: mod.rs
lofi_pomodoro_frontend/src/components/lofi_radio/components/: mod.rs  yt_player.rs
lofi_pomodoro_frontend/src/components/lofi_radio/imports/: mod.rs  yt.rs
lofi_pomodoro_frontend/src/components/pomodoro/components/: timer.rs
lofi_pomodoro_frontend/src/pomodoro/components/: button.rs  clock.rs  mod.rs
