[package]
name = "lofi_pomodoro_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
gloo = "0.8.0"
gloo-console = "0.2.3"
js-sys = "0.3.62"
serde = "1.0.163"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.85"
wasm-bindgen-futures = "0.4.35"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "Document", "CssStyleDeclaration", "Node", "NodeList", "HtmlIFrameElement"] }
yew = {version="0.20.0", features=["csr"]}
yew-hooks = "0.2.0"
